syntax = "proto3";

// do not change the package name
package pando.api.survey.v1;

import "google/api/annotations.proto";
import "pando/api/extensions.proto";
import "pando/api/shared.proto";

// these must be the same in all 'pando.survey.v1' proto files
option csharp_namespace = "Pando.Api.Survey.V1";
option java_multiple_files = true;
option java_package = "com.pando.api.survey.v1";
option ruby_package = "Pando::Api::Survey::V1";

// /api/v1/beta/survey
service SurveyBetaService {
    option (pando.api.service).required_scope = "survey";
    option (pando.api.service).required_scope = "personal_info";
    option (pando.api.service).optional_scope = {
        scope: "esign",
        note: "Required if the Survey has ESign Documents attached to it"
    };

    rpc ExecClaimInstance(ExecClaimInstanceRequest) returns (pando.api.Empty) {
        option (google.api.http) = {
            post: "/api/v1/beta/survey/instance/claim"
        };
    }
}

message ExecClaimInstanceRequest {
    string instance_guid = 1;
    string claim_code = 2;
}
