import adminService from "./pando/api/survey/v1/admin_grpc_web_pb.js";
import surveyService from "./pando/api/survey/v1/survey_grpc_web_pb.js";
import previewService from "./pando/api/survey/v1/preview_grpc_web_pb.js";
import reportsService from "./pando/api/survey/v1/reports_grpc_web_pb.js";
import esignAdminService from "./pando/api/esign/v1/admin_grpc_web_pb.js";
import esignService from "./pando/api/esign/v1/esign_grpc_web_pb.js";
import templateAdminService from "./pando/api/template/v1/admin_grpc_web_pb.js";
import templateService from "./pando/api/template/v1/template_grpc_web_pb.js";
import surveyAdminBetaService from "./pando/api/survey/v1/beta/admin-beta_grpc_web_pb.js";
import surveyBetaService from "./pando/api/survey/v1/beta/survey-beta_grpc_web_pb.js";
import admin from "./pando/api/survey/v1/admin_pb.js";
import survey from "./pando/api/survey/v1/survey_pb.js";
import preview from "./pando/api/survey/v1/preview_pb.js";
import reports from "./pando/api/survey/v1/reports_pb.js";
import surveyshared from "./pando/api/survey/v1/shared_pb.js";
import esign from "./pando/api/esign/v1/esign_pb.js";
import esignAdmin from "./pando/api/esign/v1/admin_pb.js";
import template from "./pando/api/template/v1/template_pb.js";
import templateAdmin from "./pando/api/template/v1/admin_pb.js";
import shared from "./pando/api/shared_pb.js";
import esignshared from "./pando/api/esign/v1/shared_pb.js";
import surveyAdminBeta from "./pando/api/survey/v1/beta/admin-beta_pb.js";
import surveyBeta from "./pando/api/survey/v1/beta/survey-beta_pb.js";
export {
    adminService,
    surveyService,
    previewService,
    reportsService,
    esignAdminService,
    esignService,
    templateAdminService,
    templateService,
    surveyAdminBetaService,
    surveyBetaService,
    admin,
    survey,
    preview,
    reports,
    surveyshared,
    esign,
    esignAdmin,
    template,
    templateAdmin,
    shared,
    esignshared,
    surveyAdminBeta,
    surveyBeta
};